<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E869D"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/empty_transaction"
        android:src="@drawable/no_transaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/card_view"
        app:cardBackgroundColor="#F1EAEA"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/transaction_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/transactions"
            android:textColor="#596F84"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView5"
            tools:ignore="TextContrastCheck" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="380dp"
            android:layout_height="400dp"
            android:layout_marginTop="400dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/empty_transaction"
            android:src="@drawable/no_transactions" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="450dp"
        android:layout_height="160dp"
        android:layout_marginTop="85dp"
        app:cardBackgroundColor="#506C88"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="440dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        app:cardBackgroundColor="#667C90"
        app:cardCornerRadius="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/balance"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:text="@string/balance_head"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/reward_points"
            android:src="@drawable/points_icon_vector"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="100dp"
            android:text="@string/_500"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="125dp"
            android:text="@string/reward_points"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/transfer_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="65dp"
            android:backgroundTint="@color/white"
            android:text="@string/transfer_money"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/head"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="#6E869D"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView2"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/_100_reward_points_1_putatoe_credit"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:text="@string/_1_putatoe_credit_1_rupee"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="37dp"
            android:text="@string/reward_points_message"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.310">

        <ImageView
            android:id="@+id/add_money"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/add_money"
            android:src="@drawable/add_money_icon" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/add_money"
            android:textColor="#596F84"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/redeem_credit"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="210dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/redeem_as_credit"
            android:src="@drawable/gift_icon" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/redeem_as_credit"
            android:textColor="#596F84"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/send_to_bank"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="360dp"
            android:layout_marginLeft="360dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/send_money_to_bank"
            android:src="@drawable/bank_icon" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/send_money_to_bank"
            android:textColor="#596F84"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
