<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="55dp"
        app:cardBackgroundColor="#D2DDE1"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/add_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:text="@string/no_bank_accounts"
            android:textColor="#3A5A69"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="2dp"
            android:padding="5dp"
            android:text="@string/add_account"
            android:textColor="#3A5A69"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/close_send_bank"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_margin="15dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/close_this_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/add_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/add_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:backgroundTint="#E1E4EB"
        android:text="@string/add_a_bank_account"
        android:textColor="#3A5A69"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>