<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="1dp">

    <TextView
        android:id="@+id/usernameHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#D0DCE6"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/enter_aadhaar_card_number"
        android:textColor="#727A98"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Amount"
        android:hint="@string/aadhaar_number_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#8EA1B8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameHead"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:backgroundTint="#687192"
        android:gravity="center"
        android:text="@string/submit_"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/close_redeem_credit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:ignore="TextContrastCheck"
        tools:targetApi="p" />

    <Button
        android:id="@+id/close_redeem_credit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:backgroundTint="#687192"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:ignore="TextContrastCheck"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>
